OnaniFrontend/static/css/onani.style.css
/*
 * @Author: Blakeando
 * @Date:   2020-08-14 21:37:59
 * @Last Modified by:   Blakeando
 * @Last Modified time: 2020-09-17 17:29:28
*/


/* All elements */
* {
  -webkit-font-smoothing: subpixel-antialiased;
  backface-visibility: hidden;
  color: red;
  font-family: 'Jost', sans-serif;
  margin: 0;
  padding: 0;
  transform: translateZ(0);
  z-index: 1;
}

html {
  background-color: black;
}

/* Body */
body {
  /* margin-right: 390px; */
  background-color: black;
  margin-left: 215px;
  margin-right: 215px;
  margin-top: 65px;
  min-height: calc(100vh - 65px);
  overflow-x: hidden; 
}

/* Profile body */
body.profile {
  background-color: black;
  margin-left: 215px;
  margin-right: 390px;
  margin-top: 65px;
  min-height: calc(100vh - 65px);
  overflow-x: hidden; 
}

/* Input elements */
input {
  background-color: black;
  border: 1px solid red;
  border-radius: 0;
  text-align: center;
  text-decoration: none;
}

/* Button hover */
input[type=button]:hover, 
input[type=submit]:hover {
  background-color: #252525;
}

/* Border bottom only on inputs */
input[type=text], 
input[type=email], 
input[type=password] {
  border: 0;
  border-bottom: 1px solid red;
}

/* Border focus highlight */
input[type=text]:focus, 
input[type=email]:focus, 
input[type=password]:focus {
  background-color: #0f0f0f;
}


/* Navbar logo */
#logo {
  color: red;
  cursor: pointer;
  display: inline-block;
  font-family: "Bloody";
  font-size: 36px;
  padding: 14px 16px;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  font-weight: normal;
  font-style: normal;
  background: -webkit-linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(255, 0, 0, 1) 80%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* Navigation bar */
header.navbar {
  align-items: flex-start;
  display: flex;
  height: 65px;
  justify-content: left;
  left: -215px;
  margin-bottom: 70px;
  max-height: 65px;
  outline-offset: -1px;
  outline: 1px solid red;
  position: absolute;
  right: -215px;
  text-align: left;
  top: -65px;
  z-index: 666; /* fuck you css */
}

/* Links in the Navigation bar */
header.navbar a {
  align-self: center;
  color: red;
  display: inline-flex;
  font-size: 16px;
  padding: 14px 16px;
  text-align: center;
  text-decoration: none;
  vertical-align: middle;
}

/* The dropdown container */
div.dropdown {
  align-self: center;
  color: red;
  display: inline-flex;
  font-size: 16px;
  text-align: center;
  text-decoration: none;
  vertical-align: middle;
}


/* Search box container */
div#search-box {
  align-self: center;
  display: inline-flex;
  font-size: 16px;
  margin-left: 15px;
  outline: 1px solid red;
  padding: 11px 16px 11px 6px;
  width: min-content;
  height: 20px;
}

/* The search form */
form#search-form {
  display: inline-flex;
}

/* search icon svg */
img#search-icon {
  cursor: pointer;
  transition: all 0.5s ease;
  width: 20px;
}

img#search-icon:hover {
  transform: scale(1.1);
}

/* The input for the search box */
input#search-input {
  background-color: black;
  border: 0;
  display: inline-flex;
  font-size: 16px;
  padding: 0px 15px 0px 15px;
  text-align: start;
  vertical-align: middle;
  width: 215px;
}

/* Tags bar */
div#left-pannel {
  left: -215px;
  margin-top: 30px;
  padding-left: 25px;
  position: absolute;
}

/* User pfp */
div#user-pfp-container {
  align-self: center;
  cursor: pointer;
  display: inline-flex;
  margin-left: auto;
  margin-right: 15px;
  max-height: 50px;
  max-width: 50px;
  outline: 1px solid red;
}

img#user-pfp {
  max-width: 50px;
  object-fit: contain;
}

div.dropdown-content {
  animation: fadein 0.2s;
  background-color: black;
  border: 1px solid red;
  box-shadow: 0px 8px 16px 0px rgba(253, 0, 0, 0.2);
  display: none;
  min-width: 50px;
  opacity: 100%;
  overflow: visible;
  position: absolute;
  right: 0;
  top: 51px;
  z-index: 5;
}

div.dropdown-content a {
  color: red;
  background-color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  z-index: 5;
}

div.dropdown-content a:hover {
  background-color: #252525;
}

div.dropdown:hover div.dropdown-content {
  display: block;
}

header.navbar a:hover, div.dropdown:hover button.dropbtn {
  background-color: #252525;
}

/* News and chat */
div#right-pannel {
  right: 0;
  margin-top: 30px;
  padding-right: 25px;
  right: -390px;
  position: absolute;
}

/* News box */
div#news-container {
  width: 350px;
  height: 100px;
  border: 1px solid red;
  overflow-y: scroll;
}

/* News box items */
div#news-container li {
  padding: 3px;
  font-size: 1.2em;
  list-style-type: none;
}

/* News box links */
div#news-container li a {
  text-decoration: none;
}

/* Chatbox container */
div#chatbox {
  padding-top: 50px;
}

/* Chat box */
div#chat-container {
  border: 1px solid red;
  height: 300px;
  width: 350px;
}

/* Message area */
div#chat-message-area {
  height: 265px;
  overflow-y: scroll;
  width: 100%;
  word-break: break-all;
}

/* Message area item aka message */
div#chat-message-area li {
  color: rgb(219, 92, 92);
  padding: 5px;
  font-size: 1em;
  list-style-type: none;
  vertical-align: middle;
}

/* Markdown shit */
div#chat-message-area li p {
  display: inline-block;
  color: rgb(219, 92, 92);
}

/* Link */
div#chat-message-area li p a {
  background-color: #ff00001e;
  color: rgb(219, 92, 92);
}


/* The message input box */
div#chat-message-input-container {
  display: flex;
  border-top: 1px solid red;
  height: 35px;
  width: 100%;
}

/* The place where you enter text */
input#chat-box-textarea {
  border: 0px solid red;
  display: inline-flex;
  font-size: 16px;
  padding: 0 15px 0 15px;
  text-align: start;
  vertical-align: middle;
  width: 82.5%;
  height: 95%;
  z-index: 0;
}

/* Keep chat input as black when focused */
input#chat-box-textarea:focus {
  background-color: black;
}

/* The send button */
i#chat-box-send {
  align-self:center;
  cursor: pointer;
}
/* ... */

